# bit-struct

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: doc_tests.rs  integration.rs
tests/compile/: incorrect_type.stderr  too_big.stderr  too_many.stderr
