[package]
name = "bit-struct"
version = "0.1.16"
edition = "2021"
description = "Define structs which have fields which are assigned to individual bits, not bytes"
repository = "https://github.com/andrewgazelka/bit-struct"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bit", "struct" , "macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
trybuild = "1.0"